# bot-ash

./: .env.example  README.md  main.ipynb  pyproject.toml
bot-ash/: gpt.py  main.py
