[tool.poetry]
name = "bot-ash"
version = "0.1.0"
description = ""
authors = ["Ashkan Faghihi <ashkan117@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
ipykernel = "^6.25.2"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
